--- a/cyb3ria0.1.2/static/register.html
+++ b/cyb3ria0.1.2/static/register.html
@@ -13,6 +13,10 @@
         <input type="text" id="username" name="username" required><br>
         <label for="password">Password:</label><br>
         <input type="password" id="password" name="password" required><br>
+         <label for="repeatPassword">Repeat Password:</label><br>
+        <input type="password" id="repeatPassword" name="repeatPassword" required><br>
+         <label for="invitationCode">Invitation Code:</label><br>
+        <input type="text" id="invitationCode" name="invitationCode" required><br>
         <button type="submit">Register</button>
     </form>
     <div id="result"></div>
@@ -22,8 +26,10 @@
 
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
+           const repeatPassword = document.getElementById('repeatPassword').value;
+           const invitationCode = document.getElementById('invitationCode').value;
 
-            if (!username || !password) {
+            if (!username || !password || !repeatPassword || !invitationCode) {
                 document.getElementById('result').textContent = 'Please fill in all fields.';
                 return;
             }
@@ -33,7 +39,7 @@
                 headers: {
                     'Content-Type': 'application/json'
                 },
-                body: JSON.stringify({ username: username, password: password })
+                body: JSON.stringify({ username: username, password: password, repeat_password: repeatPassword, invitation_code: invitationCode })
             })
             .then(response => {
                 if (!response.ok) {
@@ -43,7 +49,7 @@
             })
             .then(data => {
                 console.log('Success:', data);
-                document.getElementById('result').textContent = 'Success: ' + JSON.stringify(data);
+                document.getElementById('result').textContent = 'Success: ' + data.message;
             })
             .catch((error) => {
                 console.error('Error:', error);
