--- a/cyb3ria0.1.2/static/chat.html
+++ b/cyb3ria0.1.2/static/chat.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <h1>Chat</h1>
+    <p id="connection-status">Connecting</p>
     <ul id="messages"></ul>
     <form id="form" action="">
         <input id="name" autocomplete="off" placeholder="Type your message here..." />
