--- a/cyb3ria0.1.2/static/register.html
+++ b/cyb3ria0.1.2/static/register.html
@@ -13,21 +13,38 @@
         <input type="text" id="username" name="username" required><br>
         <label for="password">Password:</label><br>
         <input type="password" id="password" name="password" required><br>
-         <label for="repeatPassword">Repeat Password:</label><br>
+        <label for="repeatPassword">Repeat Password:</label><br>
         <input type="password" id="repeatPassword" name="repeatPassword" required><br>
-         <label for="invitationCode">Invitation Code:</label><br>
+        <label for="invitationCode">Invitation Code:</label><br>
         <input type="text" id="invitationCode" name="invitationCode" required><br>
+        <input type="hidden" id="ipAddress" name="ipAddress">
+        <input type="hidden" id="macAddress" name="macAddress">
         <button type="submit">Register</button>
     </form>
     <div id="result"></div>
     <script>
+        // Получаем IP-адрес клиента
+        fetch('https://api.ipify.org?format=json')
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById('ipAddress').value = data.ip;
+            })
+            .catch(error => {
+                console.error('Error fetching IP address:', error);
+            });
+
+        // MAC-адрес нельзя получить напрямую в браузере
+        document.getElementById('macAddress').value = '00:00:00:00:00:00'; // Заглушка
+
         document.getElementById('registerForm').addEventListener('submit', function(event) {
             event.preventDefault();
 
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
-           const repeatPassword = document.getElementById('repeatPassword').value;
-           const invitationCode = document.getElementById('invitationCode').value;
+            const repeatPassword = document.getElementById('repeatPassword').value;
+            const invitationCode = document.getElementById('invitationCode').value;
+            const ipAddress = document.getElementById('ipAddress').value;
+            const macAddress = document.getElementById('macAddress').value;
 
             if (!username || !password || !repeatPassword || !invitationCode) {
                 document.getElementById('result').textContent = 'Please fill in all fields.';
@@ -39,7 +56,14 @@
                 headers: {
                     'Content-Type': 'application/json'
                 },
-                body: JSON.stringify({ username: username, password: password, repeat_password: repeatPassword, invitation_code: invitationCode })
+                body: JSON.stringify({
+                    username: username,
+                    password: password,
+                    repeat_password: repeatPassword,
+                    invitation_code: invitationCode,
+                    ip_address: ipAddress,
+                    mac_address: macAddress
+                })
             })
             .then(response => {
                 if (!response.ok) {
